# cybersecurity-slides

./: .markdownlinkcheck.json  .markdownlint.jsonc  .ski-lint.yml  README.md  h0.md  h1.md  h2.md  h3.md  h9.md  index-template.html  mkslides.yml  pyproject.toml  reveal-md.json  reveal.json  slides.css  theme.css
.github/workflows/: publish.yml
cybersec-slides/: h1.md  index-template.html  reveal-md.json  reveal.json
docs/: h0.md  h1.md  h10.md  h2.md  h3.md  h4.md  h5.md  h6.md  h7.md  h8.md  h9.md
docs/img/h3/: botnet.avif  tailgating-1.avif
docs/img/h7/: vpn-ad-2.avif
docs/img/h9/: noc.avif
img/: cowboy.avif
